# JRadiEvo

./: .gitignore  LICENSE  README.md  pyproject.toml
jradievo/: evaluate.py  inference.py  train.py
jradievo/config/: _schema.py  final.py
jradievo/datasets/: __init__.py  _simple.py
jradievo/merge/: __init__.py  _dare.py  _task_vector.py  _ties.py
jradievo/metrics/: __init__.py  _bleu.py  _meteor.py  _rouge.py
jradievo/runner/: evolve_cpu.py  evolve_cpu_offload.py  evolve_gpu.py  inference.py
jradievo/utils/: __init__.py  _pure.py  _task_dependents.py
