[build-system]
requires = ["setuptools >= 61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jradievo"
description = "JRadiEvo: A Japanese Radiology Report Generation Model Enhanced by Evolutionary Optimization of Model Merging"
readme = "README.md"
authors = [{ name = "Kaito Baba", email = "k.ai.to47802@gmail.com" }]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "optuna",
    "mecab-python3",
    "unidic-lite",
    "polars",
    "pillow",
    "janome",
    "einops",          # "BAAI/Bunny-v1_1-Llama-3-8B-V"
    "cmaes",
    "rouge_score",
    "absl-py",
    "nltk",
    "python-dotenv",
    "huggingface-hub",
    "psutil",
]
dynamic = ["version"]

[project.optional-dependencies]
check = ["mypy", "ruff"]

[tool.setuptools.packages.find]
include = ["jradievo*"]

[tool.setuptools.dynamic]
version = { attr = "jradievo.__version__" }

[tool.ruff]
line-length = 99
target-version = "py39"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    ".asv",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "N", "SIM", "PERF", "RUF"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-sort-within-sections = true
order-by-type = false

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true

ignore_missing_imports = true
exclude = [".venv", "venv", "^build/"]
